- Updated - Styles Extension: Move Gutenberg utilities to Styles extension
- Updated - Utilities now will generate own inline CSS / method to load any utility programatically
- Updated - Added couple more missing utilities
- Updated - JSON custom navbarBreakpoint to mobileBreakpoint rename (it is used on multiple places not just navbar)
- Fixed - Utilities responsive classes (generating wrong classnames for breakpoints)
- Fixed - Search post spacing issue - added post bottom margin
- Added - Opt out from the core colors and gradients

v5.2.9
- Updated - Placeholder from site url to "Placeholder" text
- Updated - Gutenberg styles extension to skip blocks with null blockName
- Updated - WP Social Links add blockGap CSS support
- Fixed - Latest Posts block double "list-unstyled" class

v5.2.8
- Updated - Pagination class updated to block-templates/template-parts to be picked up by Utilitiy feature
- Updated - Pagination to inherit button border radius
- Updated - Buttons selector to extend couple of other blocks buttons
- Updated - Minor updates to code structure (moved some code to its Gutenberg block)
- Updated - Sanitize link hover color output in global styles
- Updated - Gutenberg Styles extension: normalized hooks priorioty (20 for all hooks / 10 is for WP)
- Updated - Post featured image refactor/merge with Media class (from core) and style attributes will reflect on frontend
- Added - wecodeart/filter/gutenberg/featured/ratio filter (boolean) for using aspect ratio calc function or real size
- Added - wecodeart/filter/gutenberg/featured/placeholder filter (string) for changing placeholder text
- Added - Post featured image block on single template

v5.2.7
- Removed - Redirect to admin about screen after switch theme
- Updated - Code cleanup
- Updated - Navigation add core color pallete
- Fixed - Double post dates (with updated posts)

v5.2.6
- Updated - Gutenberg Styles extension will process all blocks / customCSSId block attribute is not required anymore